correction responsive modal scrollbar

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -232,7 +232,6 @@
   width: 100vw;
 }
 #modal {
-  height: auto;
   max-width: 1400px;
   min-width: 300px;
   /* width: 750px; */
